--- a/apps/exfate_web/assets/css/app.css
+++ b/apps/exfate_web/assets/css/app.css
@@ -1,3 +1,24 @@
 /* This file is for your main application css. */
 
 @import "./phoenix.css";
+
+.wrapper {
+    display: grid;
+    grid-template-rows: repeat(4, min-content);
+    grid-template-columns: repeat(4, min-content);
+    grid-column-gap: 8px
+}
+.wrapper > div {
+    line-height: 4rem;
+}
+.wrapper > div > button {
+    width: 100%;
+}
+.wrapper > div > input {
+    text-align: center;
+    width: 3em;
+}
+.wrapper > .submit {
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
